--- a/actividades.html
+++ b/actividades.html
@@ -39,20 +39,18 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/image6.jpg" class="hero-img" alt="">
+                <img src="img/image6.png" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Actividades Eventes Presentaciones Artísticas</h2>
-                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicin
-                    elit. Veritatis hic quidem sint et deleniti in, offci
-                    reiciendis nostrum voluptatum sunt tenetur esse eligd
-                    fugit quis adipisci.</h4>
+                    <h4>Descubre el talento y la dedicación de nuestros estudiantes a través 
+                        de nuestras actividades y eventos.</h4>
                     </div>
                 </div>
             </section>
             <section class="actividades__galery">
                 <div class="actividades__galery-list container">
                     <picture class="actividades__galery-item">
-                        <img src="img/image19.jpg" class="actividades__galery-item-img" alt="">
+                        <img src="img/image19.png" class="actividades__galery-item-img" alt="">
                         <div class="actividades__galery-item-info">
                             <h3>Actuación</h3>
                             <p>Lorem elit.ui, vel corporis aut fugit voluptati 
@@ -110,7 +108,7 @@
                         </div>
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image18.jpg" class="actividades__galery-item-img" alt="">
+                        <img src="img/image18.png" class="actividades__galery-item-img" alt="">
                         <div class="actividades__galery-item-info">
                             <h3>Clases</h3>
                             <p>Lorem elit.ui, vel corporis aut fugit  
