--- a/clases.html
+++ b/clases.html
@@ -38,12 +38,16 @@
             </div>
         </header>
         <main>
-            <section class="clases__hero">
-            <video src="video/Swan Lake – Dance of the cygnets (The Royal Ballet) - Royal Ballet and Opera (720p, h264).mp4" class="clases__hero-video" autoplay></video>
+            <section class="hero">
+                <img src="img/image18.png" class="hero-img" alt="">
+                <div class="hero-info container">
+                    <h2>Formación Artística</h2>
+                    <h4>Desarrolla tu talento de la mano de expertos. 
+                        En Academia LCA, ofrecemos clases diseñadas 
+                        para potenciar tus habilidades y creatividad.</h4>
+                </div>
             </section>
-
             <seccion class="clases">
-                <h2>Formación Artística</h2>
                 <div class="clases__list">
                     <div class="clases__item" class="clases__item-img">
                         <img src="img/image.png" class="clases__item-img" alt="">
