--- a/contacto.html
+++ b/contacto.html
@@ -86,17 +86,17 @@
             </div>
             <section class="contacto__desarrollo">
                 <div class="contacto__desarrollo-uptaeb">
-                    <h2>Información de Desarrollo</h2>
+                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="contacto__desarrollo-uptaeb-icon">
                     <h4>Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
-                    <img src="img/Logos/uptaeb.jpg" alt="Cintillo de la UPTAEB" class="contacto__desarrollo-uptaeb-icon">
                 </div>
                 <div class="contacto__desarrollo-devs">
+                    <img src="img/icon/code-tech-dev-svgrepo-com.svg" class="contacto__desarrollo-devs-icon">
                     <h2>Equipo de desarrollo</h2>
-                    <ul>
+                    <ul class="contacto__desarrollo-devs-list">
                         <li><h4>Jhonny D. Dávila R.</h4></li>
-                        <li><h4>Beritzon R. Colmenarez</h4></li>
-                        <li><h4>Jasneli Rodríguez</h4></li>
                         <li><h4>Jesús D. Pérez B.</h4></li>
+                        <li><h4>Jasneli Rodríguez</h4></li>
+                        <li><h4>Beritzon R. Colmenarez</h4></li>
                         <li><h4>Jhosber Gil</h4></li>
                     </ul>
                 </div>
