--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <main>
             <section class="hero">
-                <img src="img/image6.jpg" class="hero-img" alt="">
+                <img src="img/image6.png" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
                     <h2>LUCES, CÁMARA Y ACCIÓN</h2>
