--- a/nosotros.html
+++ b/nosotros.html
@@ -51,13 +51,13 @@
                     <img src="img/image4.jpg" class="nosotros__historia-img" alt="">
                     <div class="nosotros__historia-info">
                         <h2 class="nosotros__historia-info-title">Nuestra Historia</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Libero enim minus impedit recusandae maiores. Id rerum 
-                            ea laudantium repellendus, sunt quas provident. Consect
-                            etur explicabo voluptas architectoLibero enim minus imp
-                            edit recusandae maiores. Id rerum ea laudantium repelle
-                            ndus, sunt quas provident. Consectetur explicabo volupt
-                            as architecto voluptate numquam ipsskkssksa blanditiis.</p>
+                        <p>La Academia de Actuación y Danzas “Luces, Cámaras y Acción” fue fundada 
+                            en 2019 por su actual directora y coordinadora, Génesis Niño. Iniciamos 
+                            como una pequeña agrupación de solo 5 estudiantes, con clases en casa de 
+                            la directora. Gracias a nuestro crecimiento y consolidación, 
+                            nos trasladamos posteriormente a la Casa de la Cultura Profesor Adelmo Ceballos. 
+                            Hoy en día, nos hemos convertido en una institución
+                            que forma artistas integrales y profesionales en diversas disciplinas.</p>
                     </div>
             </section>
             <section class="nosotros__mvv">
@@ -65,8 +65,13 @@
                     <li class="nosotros__mvv-item">
                         <h2>Nuestra Fundadora</h2>
                         <h3 class="mvv-title">Ganesis Niño</h3>
-                        <p>fundadora, directora y coordinadora de la Academia de Actuación y Danzas “Luces, Cámara y Acción”. 
-                        Artístis profecional con conociminento en diversas áreas culturales como teatro, danza, gimnasia, actuación y canto</p>
+                        <p>Es la fuerza impulsora, la fundadora, directora 
+                        y coordinadora principal de la Academia de Actuación y Danzas “Luces, Cámaras y Acción”.
+                        Como artista profesional, posee una formación integral y un profundo 
+                        dominio en diversas áreas culturales y escénicas, incluyendo: teatro, 
+                        danza, gimnasia, actuación y canto. Su experiencia profesional es el 
+                        pilar fundamental que garantiza la calidad y 
+                        la excelencia pedagógica de cada programa ofrecido por la Academia.</p>
                     </li>
                     <li class="nosotros__mvv-item">
                         <img src="img/image7.jpg" class="nosotros__mvv-item-img" alt="">
