--- a/actividades.html
+++ b/actividades.html
@@ -37,7 +37,7 @@
                 </nav>
             </div>
         </header>
-        <main>
+        <main class="actividades__main">
             <section class="hero">
                 <img src="img/image6.png" class="hero-img" alt="">
                 <div class="hero-info container">
@@ -45,6 +45,28 @@
                     <h4>Descubre el talento y la dedicación de nuestros estudiantes a través 
                         de nuestras actividades y eventos.</h4>
                     </div>
+                </div>
+            </section>
+            <section class="actividades__carrusel">
+                <div class="actividades__carrusel-container container">
+                    <ul class="actividades__carrusel-list">
+                        <li class="actividades__carrusel-item">
+                            <img src="img/image13.jpg" class="actividades__carrusel-item-img">
+                            <h3>Teatro</h3>
+                        </li>
+                        <li class="actividades__carrusel-item">
+                            <img src="img/image11.jpg" class="actividades__carrusel-item-img">
+                            <h3>Danza</h3>
+                        </li>
+                        <li class="actividades__carrusel-item">
+                            <img src="img/image15.jpg" class="actividades__carrusel-item-img">
+                            <h3>Música</h3>
+                        </li>
+                        <li class="actividades__carrusel-item">
+                            <img src="img/image18.png" class="actividades__carrusel-item-img">
+                            <h3>Actuación</h3>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="actividades__galery">
