--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </section>
             <div class="n">
                 <div class="n-info container">
-                    <h3>Contactanos y forma para de nuestra academia y
-                    se tu el proximo protagonista de nustros shows</h3>
+                    <h3>Contactanos y forma parte de nuestra academia y
+                    se tú el proximo protagonista de nustros shows</h3>
                     <div class="n-btn">
                         <button class="btn-1"><a href="">Contactar</a></button>
                         <button class="btn-2"><a href="">Requisitos</a></button>
