--- a/contacto.html
+++ b/contacto.html
@@ -38,67 +38,70 @@
                     <h2>Contacto</h2>
                 </div>
             </section>
-            <div class="contacto__academia">
-                <div class="contacto__academia-container">
-                    <div class="contacto__academia-list">
-                        <div class="contacto__academia-title">
+
+
+
+            <section class="contacto__container container">
+                <div class="contacto__list">
+                    <div class="contacto__item">
+                        <div class="contacto__item-title">
                             <h2>Contacto</h2>
                             <p>Estamos aquí para responder a tus preguntas.</p>
                         </div>
-                        <div class="contacto__academia-item">
-                            <div class="contacto__academia-info">
-                                <img src="img/icon/whatsapp.svg" class="contacto__academia-item-icon" alt="whatsapp">
-                                <h3>WhatsApp</h3>
-                                <h4>Envíanos un mensaje directo y te responderemos a la brevedad.</h4>
-                                <button class="btn-1"><a href="">Enviar Mensaje</a></button>
-                            </div>
+                        <div class="contacto__item-info">
+                            <img src="img/icon/whatsapp.svg" class="contacto__item-icon-whapp" alt="whatsapp">
+                            <h3>WhatsApp</h3>
+                            <h4>Envíanos un mensaje directo y te responderemos a la brevedad.</h4>
+                            <button class="btn-1"><a href="">Enviar Mensaje</a></button>
                         </div>
                     </div>
-                    <div class="contacto__academia-list">
-                        <div class="contacto__academia-title">
+                    <div class="contacto__item">
+                        <div class="contacto__item-title">
                             <h2>Redes Sociales</h2>
                             <p>Realiza una vuelta por nuestras redes sociales.</p>
                         </div>
-                        <div class="contacto__academia-item">
-                            <div class="contacto__academia-info">
-                                <img src="img/Logos/LCA.png" class="contacto__academia-item-icon lca" alt="whatsapp">
-                                <h3>Síguenos</h3>
-                                <h4>No te pierdas nuestras últimas noticias, eventos y actualizaciones.</h4>
-                                <div>
-                                <a href=""><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__academia-item-redes-icon" alt="facebook"></a>
-                                <a href=""><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__academia-item-redes-icon" alt="instagram"></a>
-                                <a href=""><img src="img/icon/youtube-svgrepo-com.svg" class="contacto__academia-item-redes-icon" alt="youtube"></a>
-                                </div>
+                        <div class="contacto__item-info">
+                            <img src="img/Logos/LCA.png" class="contacto__item-icon-lca" alt="whatsapp">
+                            <h3>Síguenos</h3>
+                            <h4>No te pierdas nuestras últimas noticias, eventos y actualizaciones.</h4>
+                            <div>
+                                <a href=""><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="facebook"></a>
+                                <a href=""><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="instagram"></a>
+                                <a href=""><img src="img/icon/youtube-svgrepo-com.svg" class="contacto__item-redes-icon" alt="youtube"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="contacto__academia-ubicacion">
-                <div class="contacto__academia-ubicacion-info">
-                    <h2>Ubicación</h2>
-                    <p>Calle 11 con Av. 15 Sector Dr. Baudilio Lara.</p>
+                <div class="contacto__academia-ubicacion">
+                    <div class="contacto__academia-ubicacion-info">
+                        <h2>Ubicación</h2>
+                        <p>Calle 11 con Av. 15 Sector Dr. Baudilio Lara.</p>
+                    </div>
+                    <div class="contacto__academia-ubicacion-mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
                 </div>
-                <div class="contacto__academia-ubicacion-mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                </div>
-            </div>
-            <section class="contacto__desarrollo">
-                <div class="contacto__desarrollo-uptaeb">
-                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="contacto__desarrollo-uptaeb-icon">
-                    <h4>Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
-                </div>
-                <div class="contacto__desarrollo-devs">
-                    <img src="img/icon/code-tech-dev-svgrepo-com.svg" class="contacto__desarrollo-devs-icon">
-                    <h2>Equipo de desarrollo</h2>
-                    <ul class="contacto__desarrollo-devs-list">
-                        <li><h4>Jhonny D. Dávila R.</h4></li>
-                        <li><h4>Jesús D. Pérez B.</h4></li>
-                        <li><h4>Jasneli Rodríguez</h4></li>
-                        <li><h4>Beritzon R. Colmenarez</h4></li>
-                        <li><h4>Jhosber Gil</h4></li>
-                    </ul>
+                <div class="contacto__list">
+                    <div class="contacto__item">
+                        <div class="contacto__item-info">
+                            <img src="img/icon/code-tech-dev-svgrepo-com.svg" class="contacto__item-devs-icon">
+                            <h2>Equipo de desarrollo</h2>
+                            <ul>
+                                <li><h4>Jhonny D. Dávila R.</h4></li>
+                                <li><h4>Jesús D. Pérez B.</h4></li>
+                                <li><h4>Jasneli Rodríguez</h4></li>
+                                <li><h4>Beritzon R. Colmenarez</h4></li>
+                                <li><h4>Jhosber Gil</h4></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="contacto__item">
+                        <div class="contacto__item-info">
+                            <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="contacto__item-icon-uptaeb">
+                            <h4>Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
