--- a/nosotros.html
+++ b/nosotros.html
@@ -38,9 +38,10 @@
             </div>
         </header>
         <main>
-            <section class="inicio__nosotros">
-                <div class="inicio__nosotros-info container">
-                    <h2 class="nosotros__somos-title">¿QUIENES SOMOS?</h2>
+            <section class="hero">
+                <img src="img/fondo textura cortina rojo.avif" class="hero-img" alt="">
+                <div class="hero-info container">
+                    <h2>¿QUIENES SOMOS?</h2>
                     <p>Somos la Academia de Actuación y Danzas “Luces, Cámara y Acción”, 
                     una institución dedicada a la formación artística integral y profesional. 
                     Desde nuestra fundación, nos hemos comprometido a enriquecer el 
